# lambda

./: CHANGELOG.md  LICENSE  README.md  TODO.md  lambda.cabal
app/: Main.hs  Repl.hs
src/: AST.hs  Evaluator.hs  Parser.hs
std/: std.lambda
