cabal-version:      3.0
name:               lambda
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             André Figueiredo
-- maintainer:
-- copyright:
-- category:
build-type:         Simple
extra-doc-files:    CHANGELOG.md,
                    README.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AST,
                      Evaluator,
                      Parser

    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.22.0.0,
                      parsec

    hs-source-dirs:   src
    default-language: GHC2024

executable lambda
    import:           warnings
    main-is:          Main.hs
    other-modules:    Repl
    -- other-extensions:
    build-depends:    base ^>=4.22.0.0,
                      lambda,
                      haskeline

    hs-source-dirs:   app
    default-language: GHC2024

-- test-suite lambda-test
--     import:           warnings
--     default-language: GHC2024
--     -- other-modules:
--     -- other-extensions:
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends:    base ^>=4.22.0.0,
--                       lambda
